--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <metacharset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>>CoffeeTea</title>
+        <title>CoffeeTea</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
