--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     </div>
     <div class="page page-dark notice">
         <div class="wrapper">
-            <h1 class="notice-title"><span>Бесплатная доставка от 1000₽!</span></h1>
+            <h1 class="notice-title notice-title-light"><span>Бесплатная доставка от 1000₽!</span></h1>
         </div>
     </div>
     <div class="page-light">
