--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                 <div class="collection-item collection-man">
                     <h2 class="collection-title">Каталог кофе</h2>
 
-                    <a href="" class="btn btn-xs"><img src="#" alt="Coffee collection"></a>
+                    <a href="" class="btn btn-xs"></a>
                 </div>
                 <div class="collection-item collection-woman">
                     <h2 class="collection-title">Каталог чая</h2>
 
-                    <a href="" class="btn btn-xs"><img src="#" alt="Tea collection"></a>
+                    <a href="" class="btn btn-xs"></a>
                 </div>
             </div>
         </div>
