--- a/index.html
+++ b/index.html
@@ -46,15 +46,20 @@
     <div class="page-light">
         <div class="wrapper">
             <div class="collection">
-                <div class="collection-item collection-man">
+                <div class="collection-item collection-coffee">
                     <h2 class="collection-title">Каталог кофе</h2>
 
-                    <a href="" class="btn btn-xs"></a>
+                    <a href="" class="btn btn-xs"><img src="#" alt="Каталог кофе"></a>
                 </div>
-                <div class="collection-item collection-woman">
+                <div class="collection-item collection-tea">
                     <h2 class="collection-title">Каталог чая</h2>
 
-                    <a href="" class="btn btn-xs"></a>
+                    <a href="" class="btn btn-xs"><img src="#" alt="Каталог чая"></a>
+                </div>
+                 <div class="collection-item collection-sweet">
+                    <h2 class="collection-title">Каталог сладостей</h2>
+
+                    <a href="" class="btn btn-xs"><img src="#" alt="Каталог сладостей"></a>
                 </div>
             </div>
         </div>
