--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="page-light">
         <div class="wrapper">
             <header class="header">
-                <div class="header-logo"><span class="logo">CoffeeTea</span></div>
+                <div class="header-logo"><img src="img/logo.svg" class="logo"></div>
                 <nav>
                     <ul class="nav">
                         <li class="nav-item"><a  class="nav-link" href="">Главная</a></li>
