--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <div class="page-light">
-        <div class="container">
+        <div class="wrapper">
             <div class="collection">
                 <div class="collection-item collection-coffee">
                     <h2 class="collection-title">Каталог кофе</h2>
